2005-08-28  Michael Albinus  <albinus@localhost>

	* Makefile.in: Replace trampcache.el by tramp-cache.el.

	* trampcache.el: Removed.  Replaced by tramp-cache.el.

	* tramp-cache.el: New file.  Implementation inspired by work of
	Daniel Pittman <daniel@rimspace.net>.

	* tramp.el: Introduce filename caching.  Require `tramp-cache'.
	(tramp-syntax): Correct doc string.
	(tramp-handle-file-truename, tramp-handle-file-exists-p)
	(tramp-handle-file-executable-p, tramp-handle-file-readable-p)
	(tramp-handle-file-accessible-directory-p)
	(tramp-handle-file-directory-p, tramp-handle-file-writable-p)
	(tramp-handle-file-ownership-preserved-p): Add `with-cache-data'.
	(tramp-handle-file-attributes): Add `with-cache-data'.  Check also
	for existence of applicable stat(1) command, which is preferred
	over the Perl script.
	(tramp-handle-file-attributes-with-stat, tramp-get-remote-stat):
	New defuns.
	(tramp-handle-set-file-modes, tramp-handle-add-name-to-file)
	(tramp-do-copy-or-rename-file, tramp-handle-delete-directory)
	(tramp-handle-delete-file, tramp-handle-dired-compress-file)
	(tramp-handle-dired-recursive-delete-directory)
	(tramp-handle-write-region): Flush cashed data.
	(tramp-pre-connection): Initialise cache.
	(tramp-post-connection): Check for stat(1) command.
	(tramp-maybe-open-connection): Optimize code.
	(tramp-convert-file-attributes): Handle also attributes returned
	by stat.

2005-08-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-password-prompt-regexp): There might be other
	words before trailing ":".  Reported by Kurt Steinkraus
	<kurt@steinkraus.us>.
	(tramp-chunksize): Improve docstring.
	(tramp-set-auto-save-file-modes): Octal integer code #o600 breaks
	Emacs 20.  Use `tramp-octal-to-decimal' therefore.  Reported by
	Christian Joergensen <bugs@razor.dk>.

2005-08-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-chunksize): Improve docstring.

2005-08-21  Michael Albinus  <michael.albinus@gmx.de>
